--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -109,8 +109,8 @@
             },
             {
               n: 2,
-              t: 'Nuestro algoritmo trabaja por ti',
-              d: 'Usamos IA y psicología animal para identificar coincidencias reales.'
+              t: 'Sistema de emparejamiento emocional',
+              d: 'Utilizamos un cuestionario estructurado para identificar tu tipo emocional y sugerirte mascotas compatibles.'
             },
             {
               n: 3,
