--- a/src/app/components/sesionexpirada/sesionexpirada.component.html
+++ b/src/app/components/sesionexpirada/sesionexpirada.component.html
@@ -1,7 +1,7 @@
 <div class="expired-container">
   <div class="expired-box">
     <h2>Sesión Expirada</h2>
-    <p>Tu sesión ha caducado por inactividad o token inválido.</p>
+    <p>Tu sesión ha caducado por inactividad o por un cierre de sesión automático por seguridad.</p>
     <p>Por favor, vuelve a iniciar sesión para continuar usando SoulPet.</p>
     <button class="btn-volver" (click)="volverAlLogin()">
       Volver a Iniciar Sesión
